# UCagent-test

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  check_env.py  compile_nutshell.py  install_and_compile.sh  install_and_compile_cn.sh  pyproject.toml  requirements-dev.txt  run_wsl.py  run_wsl.sh  run_wsl_tests.sh  third_party_sources.json
configs/: signal_map.example.yaml  signal_map.yaml  signal_map_real.yaml
docs/: acceptance_document.md  acceptance_plan.md  ai_defect_correction_table.md  contest_statement.md  final_checklist.md  next_round_prompts.md  optimization_plan_followup.docx  overall_solution.md  score_90_optimization_plan.md  solution_design.md  submission_review_report.md  verification_matrix.md  verification_report.md  verification_report_template.md
reports/: ai_collaboration_log.md  ai_contribution_report.json  ai_contribution_report.md  ai_fallacy_report.json  ai_fallacy_report.md  ai_human_collaboration_metrics.json  ai_human_collaboration_report.md  bug_tracker.md  core_regression_summary.json  core_regression_summary.md  coverage_convergence.csv  coverage_convergence.md  coverage_holes_attribution.md  coverage_summary.md  dut_smoke_result.md  prompt_to_bug_matrix.json  prompt_to_bug_matrix.md  rtl_state_trajectory.csv  rtl_state_trajectory.md  scoreboard_independence_proof.json  scoreboard_independence_proof.md
scripts/: build_real_dut.sh  build_verilator_coverage.sh  export_waveform.py  generate_convergence_chart.py  generate_coverage_report.sh  generate_coverage_trend.py  generate_dut_coverage_evidence.py  install_xspcomm.sh  run_large_scale_regression.py  sim_main.cpp  stage_real_dut_artifacts.sh  summarize_coverage.py  verify_p1.py
tests/: mock_dut.py  test_coverage_analyzer.py  test_coverage_trend.py  test_directed_cases.py  test_dut_regression.py  (+13 more)
(+72 files in other folders)
