[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nutshell-cache-verification"
version = "0.1.0"
description = "UCAgent-assisted verification components for NutShell Cache"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
cache-vip-regress = "cache_vip.regression:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
