[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nutshell-cache-verification"
version = "0.1.0"
description = "UCAgent-assisted verification components for NutShell Cache"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
cache-vip-regress = "cache_vip.regression:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--strict-config", "--strict-markers"]

[tool.coverage.run]
branch = true
source = ["cache_vip"]

[tool.coverage.report]
fail_under = 69
precision = 1
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["rtl/generated", "rtl/generated_real", "rtl/dut_gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
